# t212-finanzblick-sync

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  main.py  pyproject.toml  t212-finanzblick-sync.py
.claude/: settings.json
.github/workflows/: main.yml
src/: __init__.py  app.py
src/exporters/: __init__.py  finanzblick_exporter.py
src/keepass/: __init__.py  config_loader.py  secrets_manager.py
src/models/: __init__.py  transaction.py
src/trading212/: __init__.py  api_client.py  transaction_factory.py
tests/: test_app.py
tests/exporters/: test_finanzblick_exporter.py
tests/trading212/: test_api_client.py  test_transaction_factory.py
