[project]
name = "t212-finanzblick-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]
